--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -9,15 +9,17 @@
 </head>
 <body>
     <%- include('header.ejs') %>
+    <!-- <h1>alltodos length is : <%= allTodos.length%></h1> -->
     <table>
         <% for(var i = 0;i<allTodos.length; i++) { %>
             <tr>
                 <td>
-                    <%= allTodos[i].titile %>
+                    <%= allTodos[i].title %>
                 </td>
                 </tr>
         
         <% } %>
+        
         
       
        
