Update pre-commit hook and index.js file

--- a/todo-app/public/css/styles.css
+++ b/todo-app/public/css/styles.css
@@ -1,5 +1,4 @@
-
-body{
-    color: rgb(232, 35, 35);
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+body {
+  color: rgb(232, 35, 35);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
