--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -9,20 +9,8 @@
 </head>
 <body>
     <%- include('header.ejs') %>
+    <%- include('footer.ejs') %>
     <!-- <h1>alltodos length is : <%= allTodos.length%></h1> -->
-    <table>
-        <% for(var i = 0;i<allTodos.length; i++) { %>
-            <tr>
-                <td>
-                    <%= allTodos[i].title %>
-                </td>
-                </tr>
-        
-        <% } %>
-        
-        
-      
-       
-    </table>
+  
 </body>
 </html>
