--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -9,8 +9,8 @@
 </head>
 <body>
     <%- include('header.ejs') %>
+    <%- include('todos.ejs') %>
     <%- include('footer.ejs') %>
-    <!-- <h1>alltodos length is : <%= allTodos.length%></h1> -->
   
 </body>
 </html>
