--- a/todo-app/public/css/styles.css
+++ b/todo-app/public/css/styles.css
@@ -1,4 +1,9 @@
 body {
-  color: rgb(232, 35, 35);
+  color: black;
+  background-color: white;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.Todo-Item:hover .trash-icon{
+  display: block;
 }
