--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -5,12 +5,134 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-do-Manager</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <%- include('header.ejs') %>
-    <%- include('todos.ejs') %>
-    <%- include('footer.ejs') %>
+    
+    <div class="grid grid-cols-6">
+        <div class=" col-start-3 col-span-3 ">
+            <%- include('header.ejs') %>
+            <form>
+                <div class="flex gap-2 py-4"> 
+                    <div class="flex-auto">
+                        <input type="text" placeholder="what's next?"class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm" required>
+                    </div>
+                    <div class="flex-auto">
+                        <input type="date" class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm"/>
+                    </div>
+                
+                    <div class="flex-none">
+                    <button type="submit" class="bg-green-600 text-white px-5 py-2 rounded">Add</button>
+                    </div>    
+                
+                </div>
+                
+            </form>
+      
+            <div>
+                <h5>Overdue <span id="count-overdue" class="bg-green-600 inline-block"> 2 </span></h5>
+                <ul class ="list-none">
+                    <li class="Todo-Item">
+                        
+                        <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
+                        <input id="to-do-check1" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-600" >
+                        <label for="to-do-check1" class="ml-2 text-sm text-gray-600 cursor-pointer">have to pay electricity bill</label>
+                        <a href="#" class="hidden trash-icon ml-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                          </svg>
+                        </a>
+                          
+                        </div>
+                    </li>
+                    <li class="Todo-Item">
+                        
+                        <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
+                        <input id="todo-check2" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-600" >
+                        <label for="todo-check2" class="ml-2 text-sm text-gray-600 cursor-pointer">ready to complete java assignment</label>
+                        <a href="#" class="hidden trash-icon ml-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                              </svg>
+                            </a>
+                        </div>
+                    </li>
+                    
+                </ul>
+                <h5>Due Today <span id="count-due-today" class="bg-green-600 inline-block"> 3 </span></h5>
+                <ul>
+                    <li class="Todo-Item">
+                        
+                        <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
+                        <input id="to-do-check3" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-600" >
+                        <label for="to-do-check3" class="ml-2 text-sm text-gray-600 cursor-pointer">washing clothes</label>
+                        <a href="#" class="hidden trash-icon ml-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                          </svg>
+                        </a>
+                          
+                        </div>
+                    </li>
+                    <li class="Todo-Item">
+                        
+                        <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
+                        <input id="to-do-check4" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-600" >
+                        <label for="to-do-check4" class="ml-2 text-sm text-gray-600 cursor-pointer">parcel letters to kalyan</label>
+                        <a href="#" class="hidden trash-icon ml-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                          </svg>
+                        </a>
+                          
+                        </div>
+                    </li>
+                    <li class="Todo-Item">
+                        
+                        <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
+                        <input id="to-do-check5" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-600" >
+                        <label for="to-do-check5" class="ml-2 text-sm text-gray-600 cursor-pointer">make call to ramu</label>
+                        <a href="#" class="hidden trash-icon ml-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                          </svg>
+                        </a>
+                          
+                        </div>
+                    </li>
+
+                </ul>
+                
+                    <h5 class="static">Due Later <span id="count-due-later" class="bg-green-600 inline-block"> 1 </span></h5>
+                    
+               
+                <ul>
+                    <li class="Todo-Item">
+                        
+                        <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
+                        <input id="to-do-check6" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-600" >
+                        <label for="to-do-check6" class="ml-2 text-sm text-gray-600 cursor-pointer">bike service</label>
+                        <a href="#" class="hidden trash-icon ml-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                          </svg>
+                        </a>
+                          
+                        </div>
+                    </li>
+                 
+                </ul>
+
+            </div>
+
+    </div>
+    </div>
+
+    
+    
+
   
 </body>
 </html>
+ 
