--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -31,7 +31,8 @@
             </form>
       
             <div>
-                <h5>Overdue <span id="count-overdue" class="bg-green-600 inline-block"> 2 </span></h5>
+                <h5>Overdue </h5>
+                <span id="count-overdue" class="bg-green-600 inline-block"> 2 </span>
                 <ul class ="list-none">
                     <li class="Todo-Item">
                         
@@ -60,7 +61,8 @@
                     </li>
                     
                 </ul>
-                <h5>Due Today <span id="count-due-today" class="bg-green-600 inline-block"> 3 </span></h5>
+                <h5>Due Today </h5>
+                <span id="count-due-today" class="bg-green-600 inline-block"> 3 </span>
                 <ul>
                     <li class="Todo-Item">
                         
@@ -104,7 +106,8 @@
 
                 </ul>
                 
-                    <h5 class="static">Due Later <span id="count-due-later" class="bg-green-600 inline-block"> 1 </span></h5>
+                    <h5 >Due Later </h5>
+                    <span id="count-due-later" class="bg-green-600 inline-block"> 1 </span>
                     
                
                 <ul>
