--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -59,7 +59,7 @@
                         <input type="text" name="title" placeholder="what's next?"class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm" required>
                     </div>
                     <div class="flex-auto">
-                        <input type="date" name="dueDate" class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm"/>
+                        <input type="date" name="dueDate" class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm" required/>
                     </div>
                 
                     <div class="flex-none">
