test failed handled

--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -1,4 +1,11 @@
-<!DOCTYPE html>
+{
+	"folders": [
+		{
+			"path": "."
+		}
+	],
+	"settings": {}
+}<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./css/styles.css">
@@ -72,10 +79,10 @@
                 
             </form>
             <div>
-                <%- include('todos.ejs',{title:"Overdue",data :overdue}) %>
-                <%- include('todos.ejs',{title:"Due Today",data:dueToday}) %>
-                <%- include('todos.ejs',{title:"Due Later",data:dueLater}) %>
-                <%- include('todos.ejs',{title:"Completed Items",data:completedItems}) %>
+                <%- include('todo.ejs',{title:"Overdue",data :overdue}) %>
+                <%- include('todo.ejs',{title:"Due Today",data:dueToday}) %>
+                <%- include('todo.ejs',{title:"Due Later",data:dueLater}) %>
+                <%- include('todo.ejs',{title:"Completed Items",data:completedItems}) %>
             </div>
  
         </div>
