--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -6,7 +6,7 @@
     <meta name="csrf-token" content="<%= csrfToken %>"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do-Manager</title>
+    <title><%= title %></title>
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
